test: ensure leo doesn't fall for the opponent's bluff in a mão de onze scenario